tests/analysis/snapshots/r#mod__symbol_table__alpha034__import_all_symbols-2.snap
---
source: tests/symbol_table/alpha034.rs
expression: foo_refs.value()
---
[
    SymbolLocation {
        file: FileId(
            1,
        ),
        start: 33,
        end: 36,
        is_public: false,
    },
]
