tests/analysis/snapshots/r#mod__symbol_table__alpha034__variable_scope-3.snap
---
source: tests/symbol_table/alpha034.rs
expression: a_defs.get(&47)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 35,
        end: 36,
        is_public: false,
    },
)
